--- a/src/main.scss
+++ b/src/main.scss
@@ -8,6 +8,8 @@
 @import "burgermenu/burgermenu";
 @import "maintext/maintext";
 @import "footer/footer";
+@import "table/table";
+@import "clock/clock";
 
 
 
