--- a/src/clock/clock.scss
+++ b/src/clock/clock.scss
@@ -1,11 +1,15 @@
 .clock {
-  font-size: 24px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 2px solid red;
-  border-radius: 36px;
+  font-size: 18px;
+  border: 2px solid #3CB371;
+  border-radius: 6px;
   background: white;
   margin: 10px;
-  padding: 10px 25px;
+  padding: 7px 20px;
+  color: black;
+}
+
+
+
+.clock:hover {
+  background: #3CB371;
 }
