--- a/src/btn/btn.css
+++ b/src/btn/btn.css
@@ -1,20 +1,28 @@
-.btn-color {
+
+.color-btn {
   display: none;
-  justify-content: center;
-  align-items: center;
 }
 
-.btn-color-show {
+.color-btn-show {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 
-.btn-color-style{
+.color-btn_change{
   margin: 10px;
   padding: 15px 25px;
   border: none;
   border-radius: 6px;
   font-size: 16px;
+}
+
+.new_color{
+  color: red;
+}
+
+
+.background_red{
+  background: pink;
 }
