main: fix color button

--- a/src/btn/btn.css
+++ b/src/btn/btn.css
@@ -18,11 +18,16 @@
   font-size: 16px;
 }
 
-.new_color{
-  color: red;
-}
 
 
 .background_red{
-  background: pink;
+  background: indianred;
+}
+
+.background_green{
+  background: green;
+}
+
+.background_yellow{
+  background: yellow;
 }
