--- a/src/table/table.css
+++ b/src/table/table.css
@@ -9,6 +9,7 @@ td:hover {
 .table-show {
   display: flex;
   justify-content: center;
+  align-items: center;
   margin-top: 50px;
 }
 
@@ -27,6 +28,7 @@ table {
 }
 
 .btn-table {
+  max-width: 250px;
   background: #3CB371;
   font-size: 20px;
   color: #e1e0de;
