--- a/src/burger/burger.css
+++ b/src/burger/burger.css
@@ -115,12 +115,24 @@ body {
   display: block;
   padding-top: 60px;
   list-style-type: none;
+  text-decoration: none;
 
 }
 
 .link-style li {
   text-decoration: none;
   padding: 11px 0;
+
+}
+
+.link-style a{
+  text-decoration: none;
+  color: black;
+
+}
+
+.link-style a:hover {
+  color: #ba1000;
 }
 
 .menu-social{
