--- a/src/students/students.css
+++ b/src/students/students.css
@@ -1,5 +1,9 @@
 .students{
-    display: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
 }
 
 .students-show{
