--- a/src/students/students.css
+++ b/src/students/students.css
@@ -1,9 +1,5 @@
 .students{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
+    display: none;
 }
 
 .students-show{
