--- a/src/maintext/maintext.css
+++ b/src/maintext/maintext.css
@@ -1,31 +1,62 @@
 .main-container {
-    display: none;
-}
-
-.main-container-show{
     display: flex;
     justify-content: center;
-    margin: 50px;
+    flex-wrap: wrap;
+    margin-bottom: 90px;
+
 }
 
+.main__text {
+    max-width: 900px;
+    padding-left: 80px;
+    line-height: 1.3;
+    font-size: 16px;
+    font-family: Roboto, Helvetica, Arial, sans-serif;
+    color: #333;
+    letter-spacing:normal;
+}
+.main__text p, li{
+    padding: 5px 0;
+}
+.main__text h2{
+    padding: 25px 0 10px 0;
+    font-size: 18px;
+}
 
-.main__header--caption{
+.main__header--caption {
     color: black;
 }
+
 .main__header {
     font-weight: bold;
     font-size: 32px;
     padding-top: 50px;
 }
 
-.image{
-    max-width: 725px;
-    max-height: 570px;
+.main-text-image {
+    width: 725px;
+    height: 570px;
+    margin: 20px 0;
 }
 
-.main__header--textborder{
-    border: 1px solid darkgrey;
-    max-width: 800px;
-    padding: 20px;
+.main-textborder {
+    border: 3px solid #f0f0f0;
+    border-radius: 5px;
+    padding: 20px 30px;
+    margin: 20px 0;
+}
+
+.main-textborder_img{
+    display: flex;
+    align-items: center;
+}
+.main-textborder_img img{
+    width: 18px;
+    height: 18px;
+}
+
+.main-textborder_img h3{
+    padding-left: 15px;
+    font-size: 16px;
 }
 
