--- a/src/endless_slider/endless_slider.css
+++ b/src/endless_slider/endless_slider.css
@@ -1,10 +1,29 @@
-.slider{
-    display: none;
+
+.visibleArea {
+    width: 450px;
+    height: 750px;
+    overflow: hidden;
 }
 
-.slider-show{
+.newslider {
+    position: relative;
+    transition: all ease 1s;
+    width: calc(100% * 5);
+    height: 750px;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #3CB371;
+    justify-content: start;
+    flex-wrap: nowrap;
 }
+
+.newslide {
+    width: 100%;
+    height: 750px;
+}
+
+.newslide img {
+    width: 100%;
+    height: 750px;
+    object-fit: cover;
+    object-position: 0;
+}
+
